<resources>
    <string name="app_name">Babble</string>
    <string name="title_activity_note_select">Note</string>

    <!-- used by main activity -->
    <string name="logout">Log Out</string>

    <!-- used by login and signout activities-->
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="sign_up_text">Don\'t have a Babble account? Click here to sign up.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">babble.</string>
    <string name="nav_header_subtitle">a simple journaling app.</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_notes">My Notes</string>
    <string name="menu_map">Emotion Map</string>
    <string name="explore_title">Explore</string>
    <string name="settings_title">User Settings</string>
    <string name="menu_settings">Settings</string>

    <string name="font_draw_button">Open Font Draw</string>
    <string name="map_button">See the Emotions Around You</string>
    <string name="title_activity_maps">Emotions Near Me</string>

    <string name="profile_picture">Change Picture</string>

    <!-- stuff for settings fragment -->
    <string name="account_prefs">Account Settings</string>
    <string name="password_change">Change Password</string>
    <string name="delete_account">Delete Babble Account</string>
    <string name="log_out">Log Out</string>

    <string name="visual_settings">Visual Settings</string>
    <string name="font_draw">Open Font Draw</string>
    <string name="themes">Change Theme</string>
    <string name="themes_summary">Paper, light, dark, etc</string>

    <string name="paper_theme">Paper Theme</string>
    <string name="default_theme">Default Theme</string>
    <string name="nautical">Nautical Theme</string>
    <string name="hearts">Hearts Theme</string>

    <string-array name="sort_array">
        <item>Time</item>
        <item>Mood</item>
        <item>Location</item>
        <item>Length</item>
        <item>Alphabetical</item>
        <item>ID</item>
    </string-array>

    <string-array name="chart_array">
        <item>Your Emotions</item>
        <item>All Emotions</item>
    </string-array>

    <string name="chartTitle">Emotions Recorded with Babble</string>
</resources>
