<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/note"
            android:title="@string/menu_notes" />
    </group>

    <item android:title="@string/explore_title">
        <menu>
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/emotion"
                android:title="@string/menu_map" />
        </menu>
    </item>

            
    <item android:title="@string/settings_title">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
