<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="294dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/babble" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_below="@id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:background="#FFFFFF"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/edit_password"
        android:layout_below="@id/edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:background="#FFFFFF"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edit_password"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:id="@+id/loginButton"
        android:layout_marginTop="30dp"
        android:background="#85c53a"/>

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="6pt"
        android:text="@string/sign_up_text"
        android:textColor="#FFFFFF"/>


</RelativeLayout>